# LangGraph-E2E-Stack

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  build_ui.ps1  build_ui.sh  dev.sh  docker-compose.yml  start.sh
backend/: .env.example  Dockerfile  MANIFEST.in  README.md  alembic.ini  debug_po_agent.py  debug_stream.py  pyproject.toml  requirements.txt  test_po_agent_direct.py
backend/agent_demo_framework/: __init__.py  main.py
backend/agent_demo_framework/agents/: __init__.py  agent_factory.py  conversational_agent.py  healthcare_agent.py  multistep_agent.py  po_preapproval_agent.py
backend/agent_demo_framework/api/: __init__.py  chat.py
backend/agent_demo_framework/cmdline/: healthcare_agent_cli.py
backend/agent_demo_framework/core/: config.py
backend/agent_demo_framework/data/: README.md
backend/agent_demo_framework/db/: database.py
backend/agent_demo_framework/models/: __init__.py  models.py
backend/agent_demo_framework/schemas/: __init__.py
backend/agent_demo_framework/tools/: po_tools.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  168451b9d5db_initial_sqlite_migration.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  agent_factory.py  base_agent.py  conversational_agent.py  healthcare_agent.py  multistep_agent.py
backend/app/api/: __init__.py  chat.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: __init__.py  models.py
backend/cmdline/: healthcare_agent_cli.py
(+48 files in other folders)
